fix: fix skills listing element wrap issue
basically display:flex was used on the listing element surrounding the bullet list which was messing up the layout. using display:block fixes this

--- a/src/components/catalogs/styles/_enterprise_catalogs.scss
+++ b/src/components/catalogs/styles/_enterprise_catalogs.scss
@@ -85,7 +85,6 @@
   font-size: 14px;
 }
 
-
 .course-info-modal {
   position: absolute !important;
   top: 10%;
@@ -134,8 +133,7 @@
 }
 
 .course-info-skills-list {
-  display: flex;
-  align-items: flex-start;
+  display: block;
   padding-inline-start: 0;
   font-size: medium;
 
@@ -154,7 +152,7 @@
   }
   .banner {
     display: block;
-  } 
+  }
   .banner-section {
     margin-bottom: 16px;
   }
